homework04/testresults.txt
.
.
compile error occurred:

Clock.java:259: error: class, interface, or enum expected
     }
     ^
1 error

Due to extra brace at EOF.  Removed, recompiled OK.
.
.

CLOCK CLASS TESTER PROGRAM
--------------------------

  Creating a new clock:
    New clock created: 00:00:00.0
    Testing validateAngleArg()....
      sending '  0 degrees', expecting double value   0.0 Correct
      sending '  450 degrees', expecting Exception - Exception thrown: java.lang.NumberFormatException
      sending '  360 degrees', expecting double value   0.0 Correct
      sending '  26.7 degrees', expecting double value   26.7 Correct
      sending '  178.92 degrees', expecting double value   178.92 Correct
      sending '  -72.5 degrees', expecting double value   Exception - Exception thrown: java.lang.NumberFormatException
     Testing validateTimeSliceArg()....
       sending '  354.8 seconds', expecting double value   354.8 Correct
       sending '  -213.0 seconds', expecting double value   Exception -1.0
       sending '  712.941 seconds', expecting double value   712.941 Correct
       sending '  1789.2432 seconds', expecting double value   1789.2432 Correct
       sending '  2789.2432 seconds', expecting double value   Exception -1.0
     Testing getHourHandAngle()....
Current time = 05:331:19860.0
The hour hand has an angle of 165.6324 degrees.

Current time = -02:-373:-42231.0
The hour hand has an angle of 36.45414 degrees.

Current time = 12:841:72840.0
The hour hand has an angle of 0.7884000000000242 degrees.
Current time = 02:-571:-84666.0
The minute hand has an angle of 179.4000000000001 degrees.
Current time = 00:-109:27774.0
The minute hand has an angle of 71.4 degrees.
Current time = 00:31:8400.0
The minute hand has an angle of 186.0 degrees.

   Hello world, from the ClockSolver program!!


   Sorry you must enter at least one argument
   Usage: java ClockSolver <angle> [timeSlice]
   Please try again...........


   Hello world, from the ClockSolver program!!


-1.0
   Hello world, from the ClockSolver program!!


0.0
   Hello world, from the ClockSolver program!!


60.0
   Hello world, from the ClockSolver program!!


1801.0
   Hello world, from the ClockSolver program!!


60.0
   Hello world, from the ClockSolver program!!


10.0
   Hello world, from the ClockSolver program!!


1.0
   Hello world, from the ClockSolver program!!


60.0
   Hello world, from the ClockSolver program!!


7.0
   Hello world, from the ClockSolver program!!


1.3
   Hello world, from the ClockSolver program!!


2.5
   Hello world, from the ClockSolver program!!


1800.0
   Hello world, from the ClockSolver program!!


1.8